--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server",
+    "start": "node backend/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon backend/server.js --ignore client",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \" npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder",
     "data:destroy": "node backend/seeder -d",
-    "production-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+   
   },
   "author": "",
   "license": "ISC",
