--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "nodemon backend/server.js --ignore client",
+    "server": "nodemon server.js --ignore client",
     "client": "npm start --prefix frontend",
     "dev": "concurrently \" npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder",
